--- a/config/database.yml
+++ b/config/database.yml
@@ -1,5 +1,10 @@
-# SQLite version 3.x
-#   gem install sqlite3-ruby (not necessary on OS X Leopard)
+common: &common
+  adapter: mysql
+  encoding: utf8
+  pool: 5
+  username: user
+  password: 
+
 development:
   adapter: sqlite3
   database: db/development.sqlite3
@@ -16,7 +21,5 @@ test:
   timeout: 5000
 
 production:
-  adapter: sqlite3
-  database: db/production.sqlite3
-  pool: 5
-  timeout: 5000
+  database: boat
+  <<: *common
